Fix hotspot-styles z-index

--- a/hotspot-styles/hotspots/rotate.css
+++ b/hotspot-styles/hotspots/rotate.css
@@ -5,6 +5,10 @@
   cursor: pointer;
 }
 
+.rotate-hotspot:hover {
+  z-index: 3;
+}
+
 
 .rotate-img,
 .rotate-content{
