--- a/hotspot-styles/hotspots/tooltip.css
+++ b/hotspot-styles/hotspots/tooltip.css
@@ -18,7 +18,7 @@
 }
 
 #tooltip:hover {
-  z-index: 2;
+  z-index: 3;
 }
 
 #tooltip .tip {
